_sass/_general.scss
body {
  background: $background-color;
  color: $text-color;
  font-family: $base-font-family;
  font-size: $mobile-font-size;
  line-height: $mobile-font-size * $base-line-height;
  font-weight: $base-font-weight;

  @include grid-media($medium-grid) {
    font-size: $base-font-size;
    line-height: $base-font-size * $base-line-height;
  }
}

h1 {
  font-family: $header-font-family;
  font-size: $header-font-size-mobile;
  text-transform: uppercase;
  @include grid-media($medium-grid) {
      font-size: $header-font-size;
  }
}

a {
  text-decoration: none;

  &:link, &:visited {
    color: $brand-color;
  }

  &:hover, &:active {
    color: $hover-color;
  }
}

.container {
  @include grid-container;
}

@mixin vertical-center() {
  position: relative;
  top: 50%;
  transform: perspective(1px) translateY(-50%);
}

.vertical-center {
  @include vertical-center;
}

%clear-btn {
  cursor: pointer;
  box-sizing: content-box;
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  -webkit-user-select: none; /* for button */
  -moz-user-select: none;
  -ms-user-select: none;

  &::-moz-focus-inner {
    border: 0;
    padding: 0;
  }

  &:focus {
    outline: none;
  }
}

.scroll {
  bottom: 5%;
  display: block;
  position: absolute;
  width: 100%;
  //@include grid-column(12);
  text-align: center;
}

.scroll__button {
  @extend %clear-btn;
  svg {
    height: 50px;
    @include grid-media($medium-grid) {
      height: 70px;
    }
  }
  &:hover, &:active {
    .scroll__element {
      fill: $hover-color;
    }
  }
}
.wanted, .hunting  {
  .scroll__button {
    display: none;
  }
  .scroll {
    bottom: 0;
    display: block;
    position: fixed;
    width: 100%;
    //@include grid-column(12);
    text-align: center;
  }

}

.scroll__element {
  fill: #fff;
}

.scroll__button--alt {
  .scroll__element {
    fill: $black;
  }
}

